vcs/specs/parser/fail/statements/continue_with_value.vr
// @test: parse-fail
// @level: L0
// @tags: parser, statements, continue, value, error
// @description: Test continue with value (not allowed)
// @expected-error: E049

fn test() {
    loop {
        continue 5;
    }
}
